--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -5,4 +7,5 @@
 
 body {
   overflow-y: hidden;
+  font-family: "Roboto", sans-serif;
 }
