fixed the bug on the header, the slider, the hamburger menu

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,7 @@
 body {
   overflow-x: hidden;
   font-family: "Roboto", sans-serif;
+  @media (min-width: 320px) and (max-width: 599px) {
+    overflow-x: hidden;
+  }
 }
